# wagtail-supertable

./: .editorconfig  .git-blame-ignore-revs  .pre-commit-config.yaml  MANIFEST.in  README.rst  package copy.json.copy  package-lock.json  package.json  pyproject.toml  setup.py  webpack.config.js
.GitHub/: dependabot.yml
.github/workflows/: auto-approve.yml
wagtailsupertable/: blocks.py  wagtail_hooks.py
wagtailsupertable/client/: table-block.js
wagtailsupertable/static/css/: table-block-modal.css  table-block.css  table.css
wagtailsupertable/static/js/: table_block.js
wagtailsupertable/templates/: table.html
wagtailsupertable/templates/wagtailadmin/: table_input.html
wagtailsupertable/templatetags/: table_span_tags.py
