[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wagtail-supertable"
dynamic = ["version"]
description = "An extended wagtail table block."
readme = "README.rst"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    { name = "Freedom of the Press Foundation" },
]
urls = { Homepage = "https://github.com/freedomofpress/wagtail-supertable" }

dependencies = [
    "wagtail>=7.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 7",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.optional-dependencies]
docs = [
    "Sphinx>=7",
    "sphinx_rtd_theme>=2.0",
]
test = [
    "pytest>=8",
    "pytest-django>=4.8",
    "beautifulsoup4>=4.12",
    "html5lib",
]

[tool.setuptools.packages.find]
include = ["wagtailsupertable*"]

[tool.setuptools.dynamic]
version = { attr = "wagtailsupertable.__version__" }

[tool.ruff]
target-version = "py312"
exclude = [
    "node_modules",
]

[tool.ruff.lint]
ignore = ["E501", "E266"]

[tool.ruff.lint.isort]
lines-after-imports = 2
section-order = [
    # the default, plus our Django and Wagtail sections
    "future",
    "standard-library",
    "django",
    "wagtail",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
"wagtail" = ["wagtail"]
